force-app/main/default/objects/Contact/fields/Active_Call_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Active_Call_Campaigns__c</fullName>
    <label>Active Call Campaigns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Denmark: My Leads</fullName>
            </value>
            <value>
                <fullName>My Leads (Danny Taube Henriksen)</fullName>
            </value>
            <value>
                <fullName>My Leads (Denis Malovic)</fullName>
            </value>
            <value>
                <fullName>Sweden: My Leads</fullName>
            </value>
            <value>
                <fullName>My Leads (Sami El Harake)</fullName>
            </value>
            <value>
                <fullName>Denmark: Subscriber Follow-Up</fullName>
            </value>
            <value>
                <fullName>Denmark: Campaign A</fullName>
            </value>
            <value>
                <fullName>Denmark: Campaign B</fullName>
            </value>
            <value>
                <fullName>Sweden: Campaign A</fullName>
            </value>
            <value>
                <fullName>Sweden: Campaign B</fullName>
            </value>
            <value>
                <fullName>Denmark: Association Call Campaign</fullName>
            </value>
            <value>
                <fullName>Denmark: No show</fullName>
            </value>
            <value>
                <fullName>Denmark: Show</fullName>
            </value>
            <value>
                <fullName>Denmark: PR leads</fullName>
            </value>
            <value>
                <fullName>Denmark: Order canceled</fullName>
            </value>
            <value>
                <fullName>Denmark: Findforsikring</fullName>
            </value>
            <value>
                <fullName>Denmark: Opt-in</fullName>
            </value>
            <value>
                <fullName>Denmark: Ejendomsoverdragelse</fullName>
            </value>
            <value>
                <fullName>Denmark: Customer Care</fullName>
            </value>
            <value>
                <fullName>Sweden: Customer Care</fullName>
            </value>
            <value>
                <fullName>Sweden - Order canceled</fullName>
            </value>
            <value>
                <fullName>Sweden - PR leads</fullName>
            </value>
            <value>
                <fullName>Sweden - No show</fullName>
            </value>
            <value>
                <fullName>Sweden - Show</fullName>
            </value>
            <value>
                <fullName>Denmark: Singles Signed up for Lectures</fullName>
            </value>
            <value>
                <fullName>Ireland: Campaign A</fullName>
            </value>
            <value>
                <fullName>Denmark: Winback on Opfølgning 3-6 måneder</fullName>
            </value>
            <value>
                <fullName>Sweden: Winback on Opfølgning 3-6 måneder</fullName>
            </value>
            <value>
                <fullName>Sweden: Winback on Annullerede møde</fullName>
            </value>
            <value>
                <fullName>Denmark: Winback on Vil selv vende tilbage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>