force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF( TODAY() &lt; DATE( YEAR(TODAY()), MONTH(Birthday__c), DAY(Birthday__c) ), YEAR(TODAY()) - YEAR(Birthday__c) - 1, YEAR(TODAY()) - YEAR(Birthday__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>