force-app/main/default/objects/Contact/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <formula>DATE( VALUE( Year_Of_Birth__c ), VALUE( Month_Of_Birth__c ), VALUE( Day_Of_Birth__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>