force-app/main/default/objects/Contact/fields/Call_Campaign_State__c.field-meta.xml
<CustomField>
    <fullName>Call_Campaign_State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Campaign State</label>
    <referenceTo>telegenta__Call_Campaign_State__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>