force-app/main/default/objects/Contact/fields/Calls_Since_Latest_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Calls_Since_Latest_Campaign__c</fullName>
    <label>Calls Since Latest Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>