force-app/main/default/objects/Contact/fields/Campaign_Current_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Current_Start_Time__c</fullName>
    <label>Campaign Current Start Time</label>
    <type>DateTime</type>
</CustomField>