force-app/main/default/objects/Contact/fields/Campaign_Previous_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Previous_Start_Time__c</fullName>
    <label>Campaign Previous Start Time</label>
    <type>DateTime</type>
</CustomField>