force-app/main/default/objects/Contact/fields/Company_Contact__c.field-meta.xml
<CustomField>
    <fullName>Company_Contact__c</fullName>
    <formula>Host__r.Company_Lecture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Contact</label>
    <type>Checkbox</type>
</CustomField>