force-app/main/default/objects/Contact/fields/CPR__c.field-meta.xml
<CustomField>
    <fullName>CPR__c</fullName>
    <inlineHelpText>Must be entered as 10 digits, no dash</inlineHelpText>
    <label>CPR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>