force-app/main/default/objects/Contact/fields/CPR_Formatted__c.field-meta.xml
<CustomField>
    <fullName>CPR_Formatted__c</fullName>
    <formula>IF(LEN(CPR__c)=10, LEFT(CPR__c,6)&amp;&quot;-&quot;&amp;RIGHT(CPR__c,4), CPR__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CPR Formatted</label>
    <type>Text</type>
</CustomField>