force-app/main/default/objects/Contact/fields/Date_of_Last_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Event__c</fullName>
    <formula>Host__r.Date_of_Last_Event__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Last Event</label>
    <type>Date</type>
</CustomField>