force-app/main/default/objects/Contact/fields/Day_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Day_Of_Birth__c</fullName>
    <label>Day of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>