force-app/main/default/objects/Contact/fields/Document_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Review_Status__c</fullName>
    <label>Document Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review Required</fullName>
            </value>
            <value>
                <fullName>Pending Final Review</fullName>
            </value>
            <value>
                <fullName>Review Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>