force-app/main/default/objects/Contact/fields/Einstein_Contact_Score__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Contact_Score__c</fullName>
    <label>Einstein Contact Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>