force-app/main/default/objects/Contact/fields/Event_m_destatus__c.field-meta.xml
<CustomField>
    <fullName>Event_m_destatus__c</fullName>
    <label>Event mødestatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Order cancelled</fullName>
            </value>
            <value>
                <fullName>Event Cancelled</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>No show</fullName>
            </value>
            <value>
                <fullName>Tilmeldingsblanket</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>