force-app/main/default/objects/Contact/fields/Final_Document_Review_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Final_Document_Review_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Final Document Review Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>