force-app/main/default/objects/Contact/fields/Final_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Review_Completed_Date__c</fullName>
    <label>Final Review Completed Date</label>
    <type>DateTime</type>
</CustomField>