force-app/main/default/objects/Contact/fields/Has_Account__c.field-meta.xml
<CustomField>
    <fullName>Has_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Account</label>
    <type>Checkbox</type>
</CustomField>