force-app/main/default/objects/Contact/fields/Host_Owner__c.field-meta.xml
<CustomField>
    <fullName>Host_Owner__c</fullName>
    <formula>IF(
    ISBLANK(Host_Owner_User__c),
    Host_Owner_Queue__c,
    Host_Owner_User__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Owner</label>
    <type>Text</type>
</CustomField>