force-app/main/default/objects/Contact/fields/Host_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Host_Owner_ID__c</fullName>
    <formula>Host__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Owner ID</label>
    <type>Text</type>
</CustomField>