force-app/main/default/objects/Contact/fields/Host_Owner_Queue__c.field-meta.xml
<CustomField>
    <fullName>Host_Owner_Queue__c</fullName>
    <formula>Host__r.Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Owner (Queue)</label>
    <type>Text</type>
</CustomField>