force-app/main/default/objects/Contact/fields/Host_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Host_Owner_User__c</fullName>
    <formula>Host__r.Owner:User.FirstName&amp;&quot; &quot;&amp;Host__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Owner (User)</label>
    <type>Text</type>
</CustomField>