force-app/main/default/objects/Contact/fields/Host_Status__c.field-meta.xml
<CustomField>
    <fullName>Host_Status__c</fullName>
    <formula>TEXT(Host__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Host Status</label>
    <type>Text</type>
</CustomField>