force-app/main/default/objects/Contact/fields/Initial_Document_Review_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Initial_Document_Review_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Document Review Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>