force-app/main/default/objects/Contact/fields/Initial_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Review_Completed_Date__c</fullName>
    <label>Initial Review Completed Date</label>
    <type>DateTime</type>
</CustomField>