force-app/main/default/objects/Contact/fields/Invalid_CPR_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Invalid_CPR_Error_Message__c</fullName>
    <label>Invalid CPR Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>