force-app/main/default/objects/Contact/fields/Invalid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Reason__c</fullName>
    <label>Invalid Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wrong Company</fullName>
            </value>
            <value>
                <fullName>Wrong Contact</fullName>
            </value>
            <value>
                <fullName>Invalid Phone Number</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>