force-app/main/default/objects/Contact/fields/Invoicing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Agreement__c</fullName>
    <formula>TEXT( Host__r.Default_Invoicing_Agreement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoicing Agreement</label>
    <type>Text</type>
</CustomField>