force-app/main/default/objects/Contact/fields/Is_CPR_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Is_CPR_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CPR Invalid</label>
    <type>Checkbox</type>
</CustomField>