force-app/main/default/objects/Contact/fields/Is_CPR_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Is_CPR_Subscriber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CPR Subscriber</label>
    <type>Checkbox</type>
</CustomField>