force-app/main/default/objects/Contact/fields/Is_Owner_User_or_Any_Queue__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_User_or_Any_Queue__c</fullName>
    <formula>OR(
    Host_Owner_ID__c = $User.Id,                 
    BEGINS(Host_Owner_ID__c, &quot;00G&quot;)              
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner User or Any Queue?</label>
    <type>Checkbox</type>
</CustomField>