force-app/main/default/objects/Contact/fields/Is_Spouse_Shared_Document_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Is_Spouse_Shared_Document_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Spouse Shared Document Recipient</label>
    <type>Checkbox</type>
</CustomField>