force-app/main/default/objects/Contact/fields/Journal_DK_2_0_Person__c.field-meta.xml
<CustomField>
    <fullName>Journal_DK_2_0_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal DK 2.0 Person</label>
    <referenceTo>df_160_person__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>