force-app/main/default/objects/Contact/fields/Journal_DK_2_0_Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Journal_DK_2_0_Person_Type__c</fullName>
    <formula>IF(
    Journal_DK_2_0_Person__r.person_hidden_person_1__c,
    &quot;Person 1&quot;,
    IF(
        Journal_DK_2_0_Person__r.person_hidden_person_2__c,
        &quot;Person 2&quot;,
        IF(
            Journal_DK_2_0_Person__r.person_hf_barn__c,
            &quot;Child&quot;,
            IF(
                Journal_DK_2_0_Person__r.person_hidden_anden_type_person__c,
                &quot;Other&quot;,
                &quot;&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Journal DK 2.0 Person Type</label>
    <type>Text</type>
</CustomField>