force-app/main/default/objects/Contact/fields/Last_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Last_Campaign__c</fullName>
    <label>Last Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>