force-app/main/default/objects/Contact/fields/Last_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_State__c</fullName>
    <label>Last Contact State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No answer or voicemail</fullName>
            </value>
            <value>
                <fullName>Number busy</fullName>
            </value>
            <value>
                <fullName>Don&apos;t have time right now</fullName>
            </value>
            <value>
                <fullName>Unqualified</fullName>
            </value>
            <value>
                <fullName>Appointment</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
            <value>
                <fullName>Missed Appointment</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>