force-app/main/default/objects/Contact/fields/Last_Email_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Clicked__c</fullName>
    <label>Last Email Clicked</label>
    <type>DateTime</type>
</CustomField>