force-app/main/default/objects/Contact/fields/Last_SMS_Reply__c.field-meta.xml
<CustomField>
    <fullName>Last_SMS_Reply__c</fullName>
    <label>Last SMS Reply</label>
    <type>DateTime</type>
</CustomField>