force-app/main/default/objects/Contact/fields/Latest_Campaign_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Campaign_Date__c</fullName>
    <label>Latest Campaign Date</label>
    <type>DateTime</type>
</CustomField>