force-app/main/default/objects/Contact/fields/Lock_Time__c.field-meta.xml
<CustomField>
    <fullName>Lock_Time__c</fullName>
    <label>Lock Time</label>
    <type>DateTime</type>
</CustomField>