force-app/main/default/objects/Contact/fields/Month_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Month_Of_Birth__c</fullName>
    <label>Month of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>