force-app/main/default/objects/Contact/fields/Next_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Time__c</fullName>
    <label>Next Call Time</label>
    <type>DateTime</type>
</CustomField>