force-app/main/default/objects/Contact/fields/Not_Interested_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_Reason__c</fullName>
    <label>Not Interested Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Already Using Competitor</fullName>
            </value>
            <value>
                <fullName>Budget Constraints</fullName>
            </value>
            <value>
                <fullName>Concerns About Costs</fullName>
            </value>
            <value>
                <fullName>Customer Hung Up</fullName>
            </value>
            <value>
                <fullName>Lack of Decision-Maker Support</fullName>
            </value>
            <value>
                <fullName>Negative Past Experience</fullName>
            </value>
            <value>
                <fullName>No Current Need</fullName>
            </value>
            <value>
                <fullName>Prefers Existing Vendor</fullName>
            </value>
            <value>
                <fullName>Product/Service Mismatch</fullName>
            </value>
            <value>
                <fullName>Rejected During Introduction</fullName>
            </value>
            <value>
                <fullName>Timing Not Right</fullName>
            </value>
            <value>
                <fullName>Unresponsive After Initial Contact</fullName>
            </value>
            <value>
                <fullName>Will Reach Out Themselves</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>