force-app/main/default/objects/Contact/fields/Platform_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Platform_Lead_ID__c</fullName>
    <externalId>true</externalId>
    <label>Platform Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>