force-app/main/default/objects/Contact/fields/Referral_ID__c.field-meta.xml
<CustomField>
    <fullName>Referral_ID__c</fullName>
    <formula>Account.Referral_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral ID</label>
    <type>Text</type>
</CustomField>