force-app/main/default/objects/Contact/fields/Send_Reminders_on_SMS__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminders_on_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Reminders on SMS</label>
    <type>Checkbox</type>
</CustomField>