force-app/main/default/objects/Contact/fields/Spouse_Phone__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Phone__c</fullName>
    <label>Spouse Phone</label>
    <type>Phone</type>
</CustomField>