force-app/main/default/objects/Contact/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description>If a SF-user is connected it shows the Team which the user belongs to.</description>
    <label>Team</label>
    <length>20</length>
    <type>Text</type>
</CustomField>