force-app/main/default/objects/Contact/fields/Unqualified_Status__c.field-meta.xml
<CustomField>
    <fullName>Unqualified_Status__c</fullName>
    <label>Unqualified Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maxcall</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>